<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_normal_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_bar_et"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/title_bg_color" >

        <ImageView
            android:id="@+id/topbar_back_et"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/btn_arrow_left"
            android:gravity="center_vertical"
            android:maxHeight="46dp"
            android:maxWidth="46dp"
            android:padding="6dp"
            android:src="@drawable/btn_back_bg"
            android:visibility="visible" />

        <TextView
            android:id="@+id/topbar_title_et"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/edit_track"
            android:textColor="@color/text_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:background="#cccccc" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:visibility="visible"
        android:background="#cccccc" />

    <EditText
        android:id="@+id/edit_track_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textSize="16sp"
        android:background="@color/white"
        android:textColor="@color/text_normal"
        android:hint="@string/hint_track_content"
        android:textColorHint="@color/text_gray"
        android:gravity="top"
        android:padding="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:visibility="visible"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/edit_track_rl"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="46dp"
        android:background="@color/white" >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/txt_edit_track"
            android:textColor="@color/text_normal"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/right_arrow_bg"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_delete_track"
            android:text="@string/delete_track"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_delete_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_save_track"
            android:text="@string/save_track"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/btn_delete_track"
            android:background="@drawable/shape_save_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
