<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/title_bg_color" >

        <ImageView
            android:id="@+id/topbar_back_tc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/btn_arrow_left"
            android:gravity="center_vertical"
            android:maxHeight="46dp"
            android:maxWidth="46dp"
            android:padding="6dp"
            android:src="@drawable/btn_back_bg"
            android:visibility="visible" />

        <TextView
            android:id="@+id/topbar_title_tc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/txt_track_comment"
            android:textColor="@color/text_normal"/>
        <TextView
            android:id="@+id/top_bar_send_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:textColor="@color/text_blue"
            android:text="@string/topbar_label_send"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:background="#cccccc" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_track_comment"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|start"
        android:padding="16dp"
        android:textColor="@color/text_normal"
        android:hint="@string/edit_track_comment"
        android:textColorHint="@color/text_gray"
        android:textSize="17sp"/>

</LinearLayout>
